--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@mui/lab": "^5.0.0-alpha.170",
     "@mui/material": "^5.15.15",
     "axios": "^1.6.8",
+    "dayjs": "^1.11.13",
     "mui-datatables": "^4.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
+    "react-signature-canvas": "^1.0.6",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
